--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -35,7 +35,7 @@
                     <br>
                     <p><b>Telefon: </b> <br><a href="tel:+13156404194">+1 (315) 670-7194</a></p>
                     <br>
-                    <p><b>Email: </b> <br><a href="mailto://info@etlap.tk">info@etlap.tk</a></p>
+                    <p><b>Email: </b> <br><a href="mailto:info@etlap.tk">info@etlap.tk</a></p>
                     <br>
                     <p><b>Nyitvatartás:</b></p>
                     <p>Hétfő - Péntek: 10:00 - 21:00</p>
